tests/negative/neg_imported_shared_global.safe
-- Expected: REJECT task_variable_ownership
with provider_transitive_global;

package neg_imported_shared_global

   task a

      loop
         provider_transitive_global.touch;



   task b

      loop
         provider_transitive_global.touch;



